--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-
-
-<p>Hey how are you</p>
+  
+  <head>
+    <title>Hey</title>
+    <script
+  </head>
+  <p>Please wait while we redirect you to the page</p>
 </html>
