--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
   
   <head>
     <title>Hey</title>
-    <script
+    <script type="text/javascript">
+    	setTimeout(() =>{
+    		window.location = 'hello.html';
+    	},2000);
+    </script>
   </head>
+  <body>
   <p>Please wait while we redirect you to the page</p>
+  </body>
 </html>
